; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_hisi-sfc.c_hisi_spi_nor_unprep.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_hisi-sfc.c_hisi_spi_nor_unprep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_nor = type { %struct.hifmc_priv* }
%struct.hifmc_priv = type { %struct.hifmc_host* }
%struct.hifmc_host = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spi_nor*, i32)* @hisi_spi_nor_unprep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hisi_spi_nor_unprep(%struct.spi_nor* %0, i32 %1) #0 {
  %3 = alloca %struct.spi_nor*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.hifmc_priv*, align 8
  %6 = alloca %struct.hifmc_host*, align 8
  store %struct.spi_nor* %0, %struct.spi_nor** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.spi_nor*, %struct.spi_nor** %3, align 8
  %8 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %7, i32 0, i32 0
  %9 = load %struct.hifmc_priv*, %struct.hifmc_priv** %8, align 8
  store %struct.hifmc_priv* %9, %struct.hifmc_priv** %5, align 8
  %10 = load %struct.hifmc_priv*, %struct.hifmc_priv** %5, align 8
  %11 = getelementptr inbounds %struct.hifmc_priv, %struct.hifmc_priv* %10, i32 0, i32 0
  %12 = load %struct.hifmc_host*, %struct.hifmc_host** %11, align 8
  store %struct.hifmc_host* %12, %struct.hifmc_host** %6, align 8
  %13 = load %struct.hifmc_host*, %struct.hifmc_host** %6, align 8
  %14 = getelementptr inbounds %struct.hifmc_host, %struct.hifmc_host* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @clk_disable_unprepare(i32 %15)
  %17 = load %struct.hifmc_host*, %struct.hifmc_host** %6, align 8
  %18 = getelementptr inbounds %struct.hifmc_host, %struct.hifmc_host* %17, i32 0, i32 0
  %19 = call i32 @mutex_unlock(i32* %18)
  ret void
}

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
